[tool.poetry]
name = "streamlit-sync"
version = "0.2.0"
description = ""
authors = ["Wauplin <lucainp@gmail.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/Wauplin"

[tool.poetry.dependencies]
python = ">=3.7,!=3.9.7,<4.0"
diskcache = "^5.4.0"
streamlit = "^1.23.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-bugbear = "^22.1.11"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 88
skip = ['.venv']
